fixed scrolling issues on iOS

--- a/static/css/_layout.scss
+++ b/static/css/_layout.scss
@@ -1,14 +1,10 @@
 $opacity: .5;
 
 body {
-	background-attachment: fixed;
-	background-image: -webkit-linear-gradient(red 0%, orange 100%);
-	height: 100vh;
-	width: 100vw;
 	
 	.bg {
     	height: 100vh;
-    	width: 100vw;
+    	width:  100vw;
     	top: 0;
     	left: 0;
     	position: fixed;
@@ -16,9 +12,11 @@ body {
     	-webkit-transition: opacity 5s;
 
     	.inner {
+// 			background-image: -webkit-linear-gradient(red 0%, orange 100%);
+    		background-attachment: fixed;
         	position: absolute;
         	height: 100%;
-        	width: 100%;
+        	width:  100%;
         	top: 0;
         	left: 0;
     	}
